# Excal

./: .gitignore  CMakeLists.txt  LICENSE
include/assembler/: assembler.h  inst_arith.h  inst_f_arith.h  inst_stack.h
include/compiler/: compiler.h  lexer.h  nodes.h  parser.h
include/shared/: args.h  err.h  opcodes.h  opcodes.hpp  shared.h  shared.hpp
include/vm/: heap.h  heap.hpp  stack.h  stack.hpp  vm.h  vm.hpp
src/: main.c  main.cpp
src/assembler/: assembler.c  inst_stack.c
src/compiler/: compiler.c
src/shared/: args.c  err.c  shared.c  shared.cpp
src/vm/: heap.c  heap.cpp  stack.c  stack.cpp  vm.c  vm.cpp
